# rust-gpu-tools

./: CLAUDE.md  COPYRIGHT  Cargo.toml  README.md  rust-toolchain
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: add.cl  add.fatbin  add.rs  metal_add.rs
examples/metal/: add.metal  add.rs
src/: busid.rs  corecounts.rs  device.rs  error.rs  lib.rs  main.rs  program.rs  scheduler.rs
src/cuda/: mod.rs  utils.rs
src/metal/: device.rs  mod.rs  utils.rs
src/multigpu/: error.rs  mod.rs  task.rs  utils.rs
src/opencl/: buffer.rs  error.rs  mod.rs  utils.rs
src/scheduler/: error.rs  mod.rs  pool.rs  resource_lock.rs  task.rs  task_file.rs  task_ident.rs
