[package]
name = "rust-gpu-tools"
version = "0.6.1"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>", "porcuquine <porcuquine@gmail.com>"]
description = "Rust OpenCL tools"
edition = "2021"
homepage = "https://github.com/filecoin-project/rust-gpu-tools"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/rust-gpu-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["opencl", "cuda"]
opencl = ["opencl3"]
cuda = ["cust"]

[dependencies]
dirs = "4.0.0"
sha2 = "0.10"
thiserror = "1.0.10"
lazy_static = "1.2"
log = "0.4.11"
hex = "0.4.3"

opencl3 = { version = "0.9.1", default-features = false, features = ["CL_VERSION_1_2"], optional = true }
cust = { git = "https://github.com/vmx/rust-cuda", branch = "uuid-more-portable", optional = true }
once_cell = "1.8.0"
temp-env = "0.2.0"
