[package]
name = "rust-gpu-tools"
version = "0.7.2"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>", "porcuquine <porcuquine@gmail.com>"]
description = "Rust OpenCL tools"
edition = "2021"
homepage = "https://github.com/filecoin-project/rust-gpu-tools"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/rust-gpu-tools"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["opencl", "cuda"]
opencl = ["opencl3"]
cuda = ["rustacuda"]

[dependencies]
home = "0.5"
sha2 = "0.10"
thiserror = "1.0.10"
log = "0.4.11"
hex = "0.4.3"

opencl3 = { version = "0.9.3", default-features = false, features = ["CL_VERSION_1_2"], optional = true }
rustacuda = { package = "fil-rustacuda", version = "0.1.3", optional = true }
once_cell = "1.8.0"
temp-env = "0.3.3"
